<resources>
    <string name="app_name">Seoulian</string>
    <string name="action_settings">Settings</string>
    <string name="description_internation_taxi">International TAXI can guarantee the best convenience to all businessman and
tourists who visit Korea. International TAXI will do our very best for your
comfortable and pleasant ride. You can get a special care by taxi drivers
before, during, and after their ride. Whether you need us for business or
pleasure, International TAXI can get you where you need to go, so give us a
try!</string>
    <string name="description_dasan_happy_call">Are you experiencing living difficulties in Seoul due to the language barrier? The Happy Call Service for Foreigners will make your life in Seoul easier and happier. The 120 Dasan Call Center will offer the \'Happy Call Service for Foreigners\' starting in April 2011. Our counselors speaking foreign languages will call you once or twice a week to provide useful information on everyday life in Seoul. Fill out the following application form and the 120 Dasan Call Center counselors will make you feel at home with their friendly counseling services on diverse matters.</string>
    <string name="title_activity_convenience">ConvenienceActivity</string>
    <string name="title_activity_economic">EconomicActivity</string>
    <string name="network_exception">Network Error</string>
    <string name="no_amount">Insert amount. Numbers only.</string>
    <string name="dialog_select_timezone">Select the time zone</string>
    <string name="dialog_select_category">Select the category</string>
    <string name="dialog_select_section">Select the section</string>
    <string name="dialog_select_before_currency">Select the before currency</string>
    <string name="dialog_select_after_currency">Select the after currency</string>
    <string name="toast_select_category">Select the category first</string>
    <string name="toast_press_back_button_to_finish">Press back button to finish</string>
    <string name="saved_storage">Saved in STORAGE</string>
    <string name="deleted_storage">Deleted out of STORAGE</string>
    <string name="select_category">SELECT CATEGORY</string>
    <string name="big_section">SECTION</string>
    <string name="big_categoty">CATEGORY</string>
    <string name="favorites">Storage</string>
    <string name="korean_speaker">Korean Speaker</string>
    <string name="menu_economic">Currency</string>
    <string name="menu_convenience">Useful</string>
    <string name="menu_attraction">Attraction</string>
    <string name="menu_spot">Spot</string>
    <string name="menu_home">Home</string>
    <string name="main_divide_contents">CONTENTS</string>
    <string name="menu_divide_link">USEFUL LINKS</string>
    <string name="menu_link_visitkorea">visitkorea.or.kr</string>
    <string name="menu_link_seoulstay">Seoul Stay</string>
    <string name="menu_link_visitseoul">visitseoul.net</string>
    <string name="main_divide_time">CURRENT TIME</string>
    <string name="useful_text_internatinaltaxi">International TAXI</string>
    <string name="useful_text_dasancall">DASAN Happy Call</string>
    <string name="currency">CHANGE CURRENCY</string>
    <string name="select">Select</string>
    <string name="amount">amount</string>
    <string name="calculate">CALCULATE</string>
    <string name="dialog_select">SELECT</string>
    <string name="dialog_close">CLOSE</string>
    <string name="spot_detail_information">Information</string>
    <string name="spot_detail_link">Web Site URL</string>
    <string name="spot_detail_phone">Phone</string>
    <string name="spot_detail_fax">Fax</string>
    <string name="spot_detail_address">Address</string>
    <string name="spot_detail_email">Email</string>
    <string name="attraction_notice_select_category">↑\nPRESS THE ABOVE BUTTON\nand SELECT CATEGORY\nto show list.</string>
    <string name="storage">Storage</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="taxi_visit_web">Visit Website</string>
    <string name="taxi_call">Phone Call</string>
    <string name="menu_tip">Tips</string>
    <string name="tip_divide_text">HELPFUL INFORMATIONS</string>
    <string name="tip_travel">Seoul Travel Guide</string>
    <string name="tip_travel_desc">Useful Informations of Seoul travel via wikitravel.org</string>
    <string name="tip_airport">Incheoun Airport</string>
    <string name="tip_airport_desc">Official Mobile page about Incheon airport</string>
    <string name="tip_news">The Seoul Times</string>
    <string name="tip_news_desc">Internet newspaper for foreigners in Korea, with news on culture and social affairs.</string>
    <string name="tip_subway">Subway Guide</string>
    <string name="tip_subway_desc">How to use Seoul subways</string>
    <string name="tip_bus">Bus Guide</string>
    <string name="tip_bus_desc">How to use Seoul Buses</string>
    <string name="police">POLICE</string>
    <string name="btn_112">1 1 2</string>
    <string name="emergency">EMERGENCY</string>
    <string name="btn_emergency_title">1 1 9</string>
    <string name="tourist_police">TOURIST POLICE</string>
    <string name="btn_tourlist_title">1330</string>
    <string name="complaint">COMPLAINT</string>
    <string name="btn_complaint_title">1 2 0</string>
    <string name="btn_complaint_desc">After connected,\n PRESS 9\n to select a language</string>
    <string name="menu_license">License</string>
</resources>