<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp90"
    android:background="@drawable/back_header">

    <kr.go.seoul.seoulian.component.TitleTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SEOULIAN"
        android:textSize="25dp"
        android:textColor="@color/clear_text"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/btn_emergency_call"
        android:layout_width="@dimen/dp45"
        android:layout_height="@dimen/dp45"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp5"
        android:clickable="true">
        <ImageView
            android:layout_width="@dimen/dp27"
            android:layout_height="@dimen/dp27"
            android:src="@drawable/selector_emergency_btn"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/btn_navi_open"
        android:layout_width="@dimen/dp45"
        android:layout_height="@dimen/dp45"
        android:layout_marginLeft="@dimen/dp5"
        android:layout_marginTop="@dimen/dp5"
        android:clickable="true">
        <ImageView
            android:layout_width="@dimen/dp15"
            android:layout_height="@dimen/dp15"
            android:src="@drawable/selector_navi_btn"
            android:layout_marginTop="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_alignParentLeft="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_alignParentBottom="true">
        <HorizontalScrollView
            android:id="@+id/menu_scroll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:scrollbars="none">
        <RadioGroup
            android:id="@+id/menu_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="4">
            <kr.go.seoul.seoulian.component.IndicatorMenuItem
                android:id="@+id/menu_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/menu_home"
                android:textColor="@color/color_menu_btn_selector"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"/>
            <kr.go.seoul.seoulian.component.IndicatorMenuItem
                android:id="@+id/menu_seoullife"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/menu_spot"
                android:textColor="@color/color_menu_btn_selector"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"/>
            <kr.go.seoul.seoulian.component.IndicatorMenuItem
                android:id="@+id/menu_attraction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/color_menu_btn_selector"
                android:text="@string/menu_attraction"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"/>
            <kr.go.seoul.seoulian.component.IndicatorMenuItem
                android:id="@+id/menu_convenience"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/color_menu_btn_selector"
                android:text="@string/menu_convenience"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"/>
            <kr.go.seoul.seoulian.component.IndicatorMenuItem
                android:id="@+id/menu_economic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/color_menu_btn_selector"
                android:text="@string/menu_economic"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"/>
            <kr.go.seoul.seoulian.component.IndicatorMenuItem
                android:id="@+id/menu_tip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/color_menu_btn_selector"
                android:text="@string/menu_tip"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"/>
            <kr.go.seoul.seoulian.component.IndicatorMenuItem
                android:id="@+id/menu_speaker"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/color_menu_btn_selector"
                android:text="@string/korean_speaker"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"/>
            <kr.go.seoul.seoulian.component.IndicatorMenuItem
                android:id="@+id/menu_storage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@color/color_menu_btn_selector"
                android:text="@string/favorites"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"/>
        </RadioGroup>
        </HorizontalScrollView>
    </RelativeLayout>

</RelativeLayout>