<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back2"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--구분선-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_weight="1"
                    android:background="@color/blur_text" />

                <kr.go.seoul.seoulian.component.TitleTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp20"
                    android:text="@string/tip_divide_text"
                    android:textColor="@color/clear_text" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_marginRight="@dimen/dp20"
                    android:layout_weight="1"
                    android:background="@color/blur_text" />
            </LinearLayout>
            <!-- seoul travel guide -->
            <RelativeLayout
                android:id="@+id/tip_btn_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/selector_list_back">
                <ImageView
                    android:id="@+id/icon_trip"
                    android:layout_width="@dimen/dp35"
                    android:layout_height="@dimen/dp35"
                    android:src="@drawable/icon_tip_trip"
                    android:layout_margin="@dimen/dp5"/>
                <kr.go.seoul.seoulian.component.TitleTextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/icon_trip"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_alignTop="@+id/icon_trip"
                    android:layout_alignBottom="@+id/icon_trip"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dp18"
                    android:textColor="@color/clear_text"
                    android:text="@string/tip_travel"/>
                <kr.go.seoul.seoulian.component.ContentTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_trip"
                    android:textColor="@color/content_text"
                    android:textSize="@dimen/dp18"
                    android:layout_marginTop="@dimen/dp10"
                    android:lineSpacingExtra="@dimen/dp3"
                    android:text="@string/tip_travel_desc"/>
            </RelativeLayout>
            <!-- airport -->
            <RelativeLayout
                android:id="@+id/tip_btn_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/selector_list_back">
                <ImageView
                    android:id="@+id/icon_airport"
                    android:layout_width="@dimen/dp35"
                    android:layout_height="@dimen/dp35"
                    android:src="@drawable/icon_tip_airport"
                    android:layout_margin="@dimen/dp5"/>
                <kr.go.seoul.seoulian.component.TitleTextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/icon_airport"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_alignTop="@+id/icon_airport"
                    android:layout_alignBottom="@+id/icon_airport"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dp18"
                    android:textColor="@color/clear_text"
                    android:text="@string/tip_airport"/>
                <kr.go.seoul.seoulian.component.ContentTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_airport"
                    android:textColor="@color/content_text"
                    android:textSize="@dimen/dp18"
                    android:layout_marginTop="@dimen/dp10"
                    android:lineSpacingExtra="@dimen/dp3"
                    android:text="@string/tip_airport_desc"/>
            </RelativeLayout>
            <!-- news -->
            <RelativeLayout
                android:id="@+id/tip_btn_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/selector_list_back">
                <ImageView
                    android:id="@+id/icon_news"
                    android:layout_width="@dimen/dp35"
                    android:layout_height="@dimen/dp35"
                    android:src="@drawable/icon_tip_news"
                    android:layout_margin="@dimen/dp5"/>
                <kr.go.seoul.seoulian.component.TitleTextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/icon_news"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_alignTop="@+id/icon_news"
                    android:layout_alignBottom="@+id/icon_news"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dp18"
                    android:textColor="@color/clear_text"
                    android:text="@string/tip_news"/>
                <kr.go.seoul.seoulian.component.ContentTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_news"
                    android:textColor="@color/content_text"
                    android:textSize="@dimen/dp18"
                    android:layout_marginTop="@dimen/dp10"
                    android:lineSpacingExtra="@dimen/dp3"
                    android:text="@string/tip_news_desc"/>
            </RelativeLayout>
            <!-- subway -->
            <RelativeLayout
                android:id="@+id/tip_btn_subway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/selector_list_back">
                <ImageView
                    android:id="@+id/icon_subway"
                    android:layout_width="@dimen/dp35"
                    android:layout_height="@dimen/dp35"
                    android:src="@drawable/icon_tip_subway"
                    android:layout_margin="@dimen/dp5"/>
                <kr.go.seoul.seoulian.component.TitleTextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/icon_subway"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_alignTop="@+id/icon_subway"
                    android:layout_alignBottom="@+id/icon_subway"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dp18"
                    android:textColor="@color/clear_text"
                    android:text="@string/tip_subway"/>
                <kr.go.seoul.seoulian.component.ContentTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_subway"
                    android:textColor="@color/content_text"
                    android:textSize="@dimen/dp18"
                    android:layout_marginTop="@dimen/dp10"
                    android:lineSpacingExtra="@dimen/dp3"
                    android:text="@string/tip_subway_desc"/>

            </RelativeLayout>
            <!-- bus -->
            <RelativeLayout
                android:id="@+id/tip_btn_bus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/selector_list_back">
                <ImageView
                    android:id="@+id/icon_bus"
                    android:layout_width="@dimen/dp35"
                    android:layout_height="@dimen/dp35"
                    android:src="@drawable/icon_tip_bus"
                    android:layout_margin="@dimen/dp5"/>
                <kr.go.seoul.seoulian.component.TitleTextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/icon_bus"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_alignTop="@+id/icon_bus"
                    android:layout_alignBottom="@+id/icon_bus"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/dp18"
                    android:textColor="@color/clear_text"
                    android:text="@string/tip_bus"/>
                <kr.go.seoul.seoulian.component.ContentTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon_bus"
                    android:textColor="@color/content_text"
                    android:textSize="@dimen/dp18"
                    android:layout_marginTop="@dimen/dp10"
                    android:lineSpacingExtra="@dimen/dp3"
                    android:text="@string/tip_bus_desc"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>